# pg-jsonschema-boon

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  META.json.in  Makefile  README.md  jsonschema.control
.ci/: apt-install-postgres  mknotes  test-cover
.github/workflows/: lint-and-test.yml  release.yml
doc/: demo.sql  jsonschema.md
eg/: README.md  address.schema.json  bench.sql  user-profile.schema.json  user.sql
schemas/: user-profile.schema.json
sql/: jsonschema--0.1.0--0.1.1.sql  jsonschema--0.1.1--0.1.2.sql  jsonschema--0.1.2--0.1.3.sql  jsonschema--0.1.3--0.1.4.sql  jsonschema--0.1.4--0.1.5.sql  jsonschema--0.1.5--0.1.6.sql
src/: lib.rs
test/expected/: default_draft.out  is_valid.out  matches.out  validates.out
test/sql/: default_draft.sql  is_valid.sql  matches.sql  validates.sql
