[package]
name = "jsonschema"
version = "0.1.2"
description = "JSON Schema validation in Postgres"
readme = "README.md"
repository = "https://github.com/tembo-io/pg-jsonschema-boon"
authors = ["David E. Wheeler <david@justatheory.com>"]
keywords = ["jsonschema", "validation", "postgres", "extension", "database", "pgrx"]
license = "MIT"
categories = ["web-programming", "database"]
edition = "2021"
exclude = [ ".github", ".gitattributes", "target", ".ci", ".vscode", ".gitignore", "META.json.in" ]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "0.12.1"
boon = "0.6"
serde_json = "1.0"

[dev-dependencies]
pgrx-tests = "0.12.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
